crates/ink/tests/ui/contract/fail/event-no-variants.rs
#[ink::event_definition]
pub enum Event {}

fn main() {}
